backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: back-service
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployement
  namespace: exam
  labels:
    app: back-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-service
  template:
    metadata:
      labels:
        app: back-service
    spec:
      containers:
        - name: backend
          image: fezzahra1949/back
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: backend-port
          livenessProbe:
            httpGet:
              port: 5000
              path: /health
            initialDelaySeconds: 40
            timeoutSeconds: 50
          readinessProbe:
            httpGet:
              port: 5000
              path: /ready
            initialDelaySeconds: 20
            timeoutSeconds: 50
          startupProbe:
            httpGet:
              path: /startup
              port: 5000
            initialDelaySeconds: 40
            timeoutSeconds: 50
