frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: front

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: frontend
          image: fezzahra1949/front
          ports:
            - containerPort: 80
              name: front-port
          resources: {}
          
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
                port: 80
            periodSeconds: 10
            failureThreshold: 3
