mongo-deployment.yaml
# Le fichier service de MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service   
  namespace: exam
  labels:
    app: mongodb-service
    tier: database
spec:
  ports:
    - port: 27027
      targetPort: 27017
  selector:       
    app: mongodb
    tier: database
  type: NodePort
---
# Le fichier 'Deployment' pour MongoDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: exam
  labels:
    app: mongodb
    tier: database
spec:
  selector: 
    matchLabels:
      app: mongodb
      tier: database
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels: 
        app: mongodb
        tier: database
    spec:
      containers:
      - image: mongo 
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:        
        - name: mongo-pv
          mountPath: /db
      volumes:
      - name: mongo-pv 
        persistentVolumeClaim:
          claimName: mongo-pvc
